# ROS_Sauron_robot_camera

./: README.md
communication/: CMakeLists.txt  package.xml
communication/launch/: roslaunch_cognex.launch
communication/msg/: Image.msg  Image_camera.msg  Liste_points.msg  Points.msg
communication/src/: ihm_cognex.py  variables_cognex.py
communication/srv/: identification.srv  localisation.srv
deplacement_robot/: CMakeLists.txt  package.xml
deplacement_robot/launch/: demo_IHM.launch  moveit_planning_demo.launch  projet_sauron.launch
deplacement_robot/msg/: Forcer_conforme.msg  IHM_msg.msg  Identification.msg  Localisation.msg  Qualite.msg  Result.msg  Trou_identification.msg  Trou_qualite.msg
deplacement_robot/plaques/: Plaque_1.stl  Plaque_1.stp  Plaque_2.stl  Plaque_2.stp  Tole epaisse.stp
deplacement_robot/saves/: distorsion  intrinsec
deplacement_robot/scripts/: StepReader.py  calib_finale.py  extractHoles.py  hole_detection.py  localisation_cognex.py  localisation_exception.py  main_loc.py  matUtils.py  matchPoints.py  move_robot_controller.py  move_robot_server.py  node_securite.py  pnp_solving.py  qualite_analyse_contour.py  qualite_interface.py  qualite_pretraitement.py  robot.py  run_calibration.py  run_identification.py  run_localisation.py  run_pointage.py  run_qualite.py  useful_robot.py  variables_cognex.py
deplacement_robot/srv/: Get_fk.srv  Move_predef.srv
motoman_driver/MotoPlus/: Controller.c  Controller.h  MotionServer.c
motoman_hc10_moveit_config/: CMakeLists.txt  package.xml
motoman_hc10_moveit_config/config/: joint_limits.yaml  kinematics.yaml  motoman_hc10.srdf
motoman_hc10_moveit_config/launch/: demo_IHM.launch  moveit.rviz  moveit_planning_demo.launch  moveit_planning_execution.launch  moveit_planning_execution_box.launch  release4.launch
motoman_hc10_moveit_config/scripts/: add_interferences.py  add_interferences_box.py  add_interferences_simulation.py  move_robot_server.py  move_robot_server_demo_release4.py
motoman_hc10_moveit_config/srv/: Robot_move.srv  Robot_set_state.srv  Speed_percentage.srv
motoman_hc10_support/urdf/: hc10_gazebo.urdf  hc10_macro.xacro
